Add ids to buttons in button-holder

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       <br> 
       <br>
       <div class="button-holder">
-        <button>Submit Guess</button>
-        <button>Reset Game</button>
-        <button>Clear Game</button>
+        <button id="submitBtn">Submit Guess</button>
+        <button id="resetBtn">Reset Game</button>
+        <button id="clearBtn">Clear Game</button>
       </div>
     </article>
     <article class="latest-score">
