--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       <br> 
       <br>
       <div class="button-holder">
-        <button id="submitBtn">Submit Guess</button>
-        <button id="resetBtn">Reset Game</button>
-        <button id="clearBtn">Clear Game</button>
+        <button id="submit-btn">Submit Guess</button>
+        <button id="reset-btn">Reset Game</button>
+        <button id="clear-btn">Clear Game</button>
       </div>
     </article>
     <article class="latest-score">
