--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       <h5>Set Range</h5>
         <figure class="inline-block">
           <p>Min Range</p>
-          <input type="text" name="minRange">
+          <input type="text" name="minRange" id="minRange">
         </figure>
         <figure class="inline-block">
           <p>Max Range</p>
-          <input type="text" name="maxRange">
+          <input type="text" name="maxRange" id="maxRange">
         </figure>
-        <button>Update</button>
+        <button id="rangeUpdate">Update</button>
     </article>
     <article class="guess">
       <p>The Current Range is <span class="range">1</span> to <span class="range">100</span></p>
