Challenge section will now update with current range.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button id="range-update" onclick="setRange()">Update</button>
     </article>
     <article class="guess">
-      <p>The Current Range is <span class="range">1</span> to <span class="range">100</span></p>
+      <p>The Current Range is <span class="range" id="display-min">1</span> to <span class="range" id="display-max">100</span></p>
       <br>
       <h5>Challenger 1</h5>
         <figure class="inline-block">
