Small changes to header

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
   <header>
-    <h1><strong>Number</strong>Guesser</h1><br>
-    <p class="decorated"><span>Ultimate Challenger Edition</span></p>
+    <div>
+      <h1><strong>Number</strong>Guesser</h1><br>
+      <p class="decorated">
+        <span>Ultimate Challenger Edition</span>
+      </p>
+    </div>
   </header>
   <section class="left-column">
     <article class="set-range">
