--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       </p>
     </div>
   </header>
-  <section class="left-column">
-    <article class="set-range">
-      <h5>Set Range</h5>
+  <main>
+    <section class="left-column">
+      <article class="set-range">
+        <h5>Set Range</h5>
         <figure class="inline-block">
           <p>Min Range</p>
           <input type="number" name="minRange" id="min-range">
@@ -27,11 +28,11 @@
           <input type="number" name="maxRange" id="max-range">
         </figure>
         <button id="range-update" onclick="setRange()">Update</button>
-    </article>
-    <article class="guess">
-      <p>The Current Range is <span class="range" id="display-min">1</span> to <span class="range" id="display-max">100</span></p>
-      <br>
-      <h5 class="challenger-name1">Challenger 1</h5>
+      </article>
+      <article class="guess">
+        <p>The Current Range is <span class="range" id="display-min">1</span> to <span class="range" id="display-max">100</span></p>
+        <br>
+        <h5 class="challenger-name1">Challenger 1</h5>
         <figure class="inline-block">
           <p>Name</p>
           <input type="text" id="name1" class="name">
@@ -40,7 +41,7 @@
           <p>Guess</p>
           <input type="text" class="guess1">
         </figure>
-      <h5 class="challenger-name2">Challenger 2</h5>
+        <h5 class="challenger-name2">Challenger 2</h5>
         <figure class="inline-block">
           <p>Name</p>
           <input type="text" id="name2" class="name">
@@ -49,71 +50,72 @@
           <p>Guess</p>
           <input type="text" class="guess2">
         </figure>  
-      <br> 
+        <br> 
+        <br>
+        <div class="button-holder">
+          <button id="submit-btn">Submit Guess</button>
+          <button id="reset-btn">Reset Game</button>
+          <button id="clear-btn">Clear Game</button>
+        </div>
+      </article>
+      <article class="latest-score">
+        <h5>Latest Score</h5>
+        <div class="current-guess-box">
+          <p class="challenger-name1">Challenger 1 Name</p>
+          <p>current guess</p>
+          <h1 id="current-guess1">97</h1>
+          <p id="guess-result1">that's too high</p>
+          <br>
+        </div>
+        <div id="divider">
+        </div>
+        <div class="current-guess-box">
+          <p class="challenger-name2">Challenger 2 Name</p>
+          <p>current guess</p>
+          <h1 id="current-guess2">3</h1>
+          <p id="guess-result2">that's too low</p>
+          <br>
+        </div>
+      </article>
       <br>
-      <div class="button-holder">
-        <button id="submit-btn">Submit Guess</button>
-        <button id="reset-btn">Reset Game</button>
-        <button id="clear-btn">Clear Game</button>
-      </div>
-    </article>
-    <article class="latest-score">
-      <h5>Latest Score</h5>
-      <div class="current-guess-box">
-        <p class="challenger-name1">Challenger 1 Name</p>
-        <p>current guess</p>
-        <h1 id="current-guess1">97</h1>
-        <p id="guess-result1">that's too high</p>
-        <br>
-      </div>
-      <div id="divider">
-      </div>
-      <div class="current-guess-box">
-        <p class="challenger-name2">Challenger 2 Name</p>
-        <p>current guess</p>
-        <h1 id="current-guess2">3</h1>
-        <p id="guess-result2">that's too low</p>
-        <br>
-      </div>
-    </article>
-    <br>
-  </section>
-  <section class="right">
-        <div class="card">
-          <div class="top-line">
-            <h3 class="bold inline challenger-1">
-              Challenger 1 Name
-            </h3>
-            <p class="inline vs">
-              VS
-            </p>
-            <h3 class="bold inline challenger-2">
-              Challenger 2 Name
-            </h3>
-          </div><!-- END TOP LINE -->
-          <hr />
-          <div class="middle-line">
-            <h2 class="bold winner-name">
-              Challenger 2 Name
-            </h2>
-            <h2 class="winner">
-              Winner
-            </h2>
-          </div><!-- END MIDDLE LINE -->
-          <hr />
-          <div class="bottom-line">
-            <h3 class="inline guesses">
-              <span class="bold guesses-number">47</span>
-              Guesses
-            </h3>
-            <h3 class="inline minutes">
-              <span class="bold minutes-number">1.35</span>
-              Minutes
-            </h3>
-            <img class="delete-btn" src="images/icons8-cancel-2.svg" alt="delete card button" />
-          </div><!-- END BOTTOM LINE -->
-        </div><!-- END CARD -->
-      </section>
-      <script type="text/javascript" src="main.js"></script>
+    </section>
+    <section class="right">
+      <div class="card">
+        <div class="top-line">
+          <h3 class="bold inline challenger-1">
+            Challenger 1 Name
+          </h3>
+          <p class="inline vs">
+            VS
+          </p>
+          <h3 class="bold inline challenger-2">
+            Challenger 2 Name
+          </h3>
+        </div><!-- END TOP LINE -->
+        <hr />
+        <div class="middle-line">
+          <h2 class="bold winner-name">
+            Challenger 2 Name
+          </h2>
+          <h2 class="winner">
+            Winner
+          </h2>
+        </div><!-- END MIDDLE LINE -->
+        <hr />
+        <div class="bottom-line">
+          <h3 class="inline guesses">
+            <span class="bold guesses-number">47</span>
+            Guesses
+          </h3>
+          <h3 class="inline minutes">
+            <span class="bold minutes-number">1.35</span>
+            Minutes
+          </h3>
+          <img class="delete-btn" src="images/icons8-cancel-2.svg" alt="delete card button" />
+        </div><!-- END BOTTOM LINE -->
+      </div><!-- END CARD -->
+    </section>
+  </main>
+  <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
