add clear functionality

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
           <div class="current-guess-box">
             <p class="challenger-name1">Challenger 1 Name</p>
             <p>current guess</p>
-            <h1 id="current-guess1">97</h1>
-            <p id="guess-result1">that's too high</p>
+            <h1 id="current-guess1">-</h1>
+            <p id="guess-result1"></p>
             <br>
           </div>
           <div id="divider">
@@ -82,8 +82,8 @@
           <div class="current-guess-box">
             <p class="challenger-name2">Challenger 2 Name</p>
             <p>current guess</p>
-            <h1 id="current-guess2">3</h1>
-            <p id="guess-result2">that's too low</p>
+            <h1 id="current-guess2">-</h1>
+            <p id="guess-result2"></p>
             <br>
           </div>
         </div>
