Create basic mobile media queries

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" type="text/css" href="css/guess-card.css">
   <link rel="stylesheet" type="text/css" href="css/score-card.css">
   <link rel="stylesheet" type="text/css" href="css/winner-card.css">
+  <link rel="stylesheet" type="text/css" href="css/media-queries.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
+
 </head>
 <body>
   <header>
