--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <link rel="stylesheet" type="text/css" href="css/winner-card.css">
   <link rel="stylesheet" type="text/css" href="css/media-queries.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
-
 </head>
 <body>
   <header>
@@ -74,19 +73,19 @@
       <article id="score-card" class="latest-score">
         <h5>Latest Score</h5>
         <div class="flex jc-space-around">
-          <div class="current-guess-box">
-            <p class="challenger-name1">Challenger 1 Name</p>
+          <div class="text-center">
+            <p class="challenger-name1 bold">Challenger 1 Name</p>
             <p>current guess</p>
-            <h1 id="current-guess1">-</h1>
+            <h1 id="current-guess1" class="bold">20</h1>
             <p id="guess-result1"></p>
             <br>
           </div>
           <div id="divider">
           </div>
-          <div class="current-guess-box">
-            <p class="challenger-name2">Challenger 2 Name</p>
+          <div class="text-center">
+            <p class="challenger-name2 bold">Challenger 2 Name</p>
             <p>current guess</p>
-            <h1 id="current-guess2">-</h1>
+            <h1 id="current-guess2" class="bold">10</h1>
             <p id="guess-result2"></p>
             <br>
           </div>
