--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="flex">
           <div>
             <label for="min-range">Min Range</label>
-            <input type="text" name="minRange" id="min-range" class="numeric-only error">
+            <input type="text" name="minRange" id="min-range" class="numeric-only">
             <p class="error-message hidden"><img src="images/error-icon.svg" alt="error icon" width="20px"/>Enter a number</p>
           </div>
           <div>
@@ -47,12 +47,12 @@
           <div class="name-container">
             <label for="name1">Name</label><br />
             <input type="text" id="name1" class="name">
-            <p class="error-message hidden"><img src="images/error-icon.svg" alt="error icon" width="20px"/>Enter a name</p>
+            <p class="error-message hidden"><img src="images/error-icon.svg" alt="error icon" width="20px"/></p>
           </div>
           <div>
             <label for="guess1">Guess</label><br />
             <input type="number" id="guess1" class="guess numeric-only">
-            <p class="error-message hidden"><img src="images/error-icon.svg" alt="error icon" width="20px"/>Enter a number</p>
+            <p class="error-message hidden"><img src="images/error-icon.svg" alt="error icon" width="20px"/></p>
           </div>
         </div>
         <h5 class="challenger-name2 dark-grey">Challenger 2</h5>
@@ -60,7 +60,7 @@
           <div class="name-container">
             <label for="name2">Name</label><br />
             <input type="text" id="name2" class="name">
-            <p class="error-message hidden"><img src="images/error-icon.svg" alt="error icon" width="20px"/>Enter a name</p>
+            <p class="error-message hidden"><img src="images/error-icon.svg" alt="error icon" width="20px"/></p>
           </div>
           <div>
             <label for="guess2">Guess</label><br />
