add range error functionality

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="text-center">
             <p class="challenger-name1 bold dark-grey">Challenger 1 Name</p>
             <p>current guess</p>
-            <h1 id="current-guess1" class="bold">20</h1>
+            <h1 id="current-guess1" class="bold">-</h1>
             <p id="guess-result1"></p>
             <br>
           </div>
@@ -91,7 +91,7 @@
           <div class="text-center">
             <p class="challenger-name2 bold dark-grey">Challenger 2 Name</p>
             <p>current guess</p>
-            <h1 id="current-guess2" class="bold">10</h1>
+            <h1 id="current-guess2" class="bold">-</h1>
             <p id="guess-result2"></p>
             <br>
           </div>
