--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <input type="text" name="maxRange" id="max-range" class="numeric-only">
             <p class="error-message hidden"><img src="images/error-icon.svg" alt="error icon" width="20px"/>Enter a number</p>
           </div>
-          <button id="range-update" class="bold" onclick="setRange()">Update</button>
+          <button id="range-update" class="bold">Update</button>
         </div>
       </article>
       <article id="guess-card">
