Moved main.js into js folder and corrected script src on index.html

--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
     <section class="right">
     </section>
   </main>
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
