add clear all cards function

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
       <br>
     </section>
     <section class="right">
+      <button id="card-clear-btn" class="hidden">Clear All</button>
     </section>
   </main>
   <script type="text/javascript" src="main.js"></script>
