Create kitten konami

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div>
       <h1><span class="bold">Number</span>Guesser</h1><br>
       <p class="decorated">
-        <span>Ultimate Challenger Edition</span>
+        <span></span>
       </p>
     </div>
   </header>
@@ -104,6 +104,7 @@
       <button id="card-clear-btn" class="hidden">Clear All</button>
     </section>
   </main>
+  <img id="grumpy-kitten" src="images/grumpy-kitten.png" alt="A grumpy fluffy kitten. Meow!" />
   <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
